# Python_Web_HW6

./: README.md  create_db.sql  hw6_db.db  pyproject.toml  query_1.sql  query_10.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  query_add_1.sql  query_add_2.sql  seeds.py
